--- a/OneDo/App.xaml
+++ b/OneDo/App.xaml
@@ -1,8 +1,17 @@
-﻿<Application
-    x:Class="OneDo.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:OneDo"
-    RequestedTheme="Light">
+﻿<Application x:Class="OneDo.App"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:viewModel="using:OneDo.ViewModel"
+             RequestedTheme="Light">
+
+    <Application.Resources>
+        <ResourceDictionary>
+            <!--<ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles/Default.xaml" />
+            </ResourceDictionary.MergedDictionaries>-->
+
+            <viewModel:ViewModelLocator x:Key="ViewModelLocator" />
+        </ResourceDictionary>
+    </Application.Resources>
 
 </Application>
