--- a/OneDo/App.xaml
+++ b/OneDo/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:viewModel="using:OneDo.ViewModel"
+             xmlns:converters="using:OneDo.Converters"
              RequestedTheme="Light">
 
     <Application.Resources>
@@ -11,6 +12,10 @@
             </ResourceDictionary.MergedDictionaries>-->
 
             <viewModel:ViewModelLocator x:Key="ViewModelLocator" />
+
+            <converters:ChangeTypeConverter x:Key="ChangeTypeConverter" />
+            <converters:StringFormatConverter x:Key="StringFormatConverter" />
+            <converters:ConditionConverter x:Key="ConditionConverter" />
         </ResourceDictionary>
     </Application.Resources>
 
