--- a/OneDo/View/Pages/MainPage.xaml
+++ b/OneDo/View/Pages/MainPage.xaml
@@ -4,10 +4,24 @@
                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                xmlns:view="using:OneDo.View"
+               xmlns:model="using:OneDo.Model"
                DataContext="{Binding MainPage, Source={StaticResource ViewModelLocator}}"
                mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="{x:Bind VM.Text}" />
+        <StackPanel>
+            <TextBlock Text="{x:Bind VM.Text}" />
+            <ListBox ItemsSource="{x:Bind VM.DataService.Data.Tags}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate x:DataType="model:Tag">
+                        <TextBlock Text="{x:Bind Name}">
+                            <TextBlock.Foreground>
+                                <SolidColorBrush Color="{x:Bind Color}" />
+                            </TextBlock.Foreground>
+                        </TextBlock>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </StackPanel>
     </Grid>
 </view:BasePage>
