--- a/OneDo/App.xaml
+++ b/OneDo/App.xaml
@@ -16,6 +16,7 @@
             <converters:ChangeTypeConverter x:Key="ChangeTypeConverter" />
             <converters:StringFormatConverter x:Key="StringFormatConverter" />
             <converters:ConditionConverter x:Key="ConditionConverter" />
+            <converters:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
         </ResourceDictionary>
     </Application.Resources>
 
