--- a/OneDo/View/Pages/MainPage.xaml
+++ b/OneDo/View/Pages/MainPage.xaml
@@ -10,7 +10,7 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel Background="Aqua">
-            <TextBlock Text="{x:Bind VM.Text}" />
+            <TextBlock Text="{Binding Text}" />
             <ListBox ItemsSource="{x:Bind VM.DataService.Data.Tags}">
                 <ListBox.ItemTemplate>
                     <DataTemplate x:DataType="model:Tag">
@@ -23,5 +23,7 @@
                 </ListBox.ItemTemplate>
             </ListBox>
         </StackPanel>
+
+        <ProgressRing IsActive="{Binding IsBusy}"  />
     </Grid>
 </view:BasePage>
