Oprava chyby související s designerem.

--- a/OneDo/View/Shell.xaml
+++ b/OneDo/View/Shell.xaml
@@ -11,7 +11,15 @@
         <SplitView Content="{x:Bind VM.MainFrame}" PaneBackground="Yellow" IsPaneOpen="True" DisplayMode="CompactInline">
             <SplitView.Pane>
                 <StackPanel>
-                    <Button Command="{x:Bind VM.NavigateMainPageCommand}">Domů</Button>
+                    <Button Command="{x:Bind VM.NavigateMainPageCommand}">1</Button>
+                    <Button Command="{x:Bind VM.NavigateMainPageCommand}">2</Button>
+                    <Button Command="{x:Bind VM.NavigateMainPageCommand}">3</Button>
+                    <Button Command="{x:Bind VM.NavigateMainPageCommand}">4</Button>
+                    <Button Command="{x:Bind VM.NavigateMainPageCommand}">5</Button>
+                    <Button Command="{x:Bind VM.NavigateMainPageCommand}">6</Button>
+                    <Button Command="{x:Bind VM.NavigateMainPageCommand}">7</Button>
+                    <Button Command="{x:Bind VM.NavigateMainPageCommand}">8</Button>
+                    <Button Command="{x:Bind VM.NavigateMainPageCommand}">9</Button>
                 </StackPanel>
             </SplitView.Pane>
         </SplitView>
