--- a/OneDo/View/Pages/MainPage.xaml
+++ b/OneDo/View/Pages/MainPage.xaml
@@ -11,12 +11,12 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel Background="Aqua">
             <TextBlock Text="{Binding Text}" />
-            <ListBox ItemsSource="{x:Bind VM.DataService.Data.Tags}">
+            <ListBox ItemsSource="{Binding DataService.Data.Tags}">
                 <ListBox.ItemTemplate>
                     <DataTemplate x:DataType="model:Tag">
-                        <TextBlock Text="{x:Bind Name}">
+                        <TextBlock Text="{Binding Name}">
                             <TextBlock.Foreground>
-                                <SolidColorBrush Color="{x:Bind Color}" />
+                                <SolidColorBrush Color="{Binding Color}" />
                             </TextBlock.Foreground>
                         </TextBlock>
                     </DataTemplate>
@@ -24,6 +24,6 @@
             </ListBox>
         </StackPanel>
 
-        <ProgressRing IsActive="{Binding IsBusy}"  />
+        <ProgressRing IsActive="{Binding IsBusy}" />
     </Grid>
 </view:BasePage>
