--- a/OneDo/App.xaml
+++ b/OneDo/App.xaml
@@ -7,9 +7,9 @@
 
     <Application.Resources>
         <ResourceDictionary>
-            <!--<ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Styles/Default.xaml" />
-            </ResourceDictionary.MergedDictionaries>-->
+            </ResourceDictionary.MergedDictionaries>
 
             <viewModel:ViewModelLocator x:Key="ViewModelLocator" />
 
