--- a/OneDo/Styles/ShellStyles.xaml
+++ b/OneDo/Styles/ShellStyles.xaml
@@ -1,23 +1,13 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="using:OneDo.Controls.HamburgerMenu">
+                    xmlns:controls="using:OneDo.Controls">
 
-    <x:Double x:Key="BaseMeasure">48</x:Double>
+    <x:Double x:Key="HamburgerButtonBaseMeasure">48</x:Double>
 
-    <Style x:Key="HamburgerMenuButtonTextBlockStyle"
-           BasedOn="{StaticResource BodyTextBlockStyle}"
-           TargetType="TextBlock">
-        <Setter Property="Margin" Value="12,0" />
-        <Setter Property="HorizontalAlignment" Value="Left" />
-        <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="TextTrimming" Value="CharacterEllipsis" />
-        <Setter Property="TextWrapping" Value="NoWrap" />
-    </Style>
+    <x:Double x:Key="ShellTitleHeight">40</x:Double>
 
-    <Style x:Key="HamburgerMenuTitleTextBlockStyle"
-           BasedOn="{StaticResource BodyTextBlockStyle}"
-           TargetType="TextBlock">
-        <Setter Property="Margin" Value="12,0" />
+    <Style x:Key="ShellTitleTextBlockStyle" BasedOn="{StaticResource BodyTextBlockStyle}" TargetType="TextBlock">
+        <Setter Property="Margin" Value="0" />
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="TextTrimming" Value="CharacterEllipsis" />
@@ -26,7 +16,7 @@
         <Setter Property="CharacterSpacing" Value="75" />
     </Style>
 
-    <Style x:Key="HamburgerTitleBarButtonStyle" TargetType="Button">
+    <Style x:Key="HamburgerButtonStyle" TargetType="Button">
         <Setter Property="Background" Value="Transparent" />
         <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}" />
         <Setter Property="UseSystemFocusVisuals" Value="True" />
@@ -79,6 +69,14 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+    </Style>
+
+    <Style x:Key="HamburgerMenuButtonTextBlockStyle" BasedOn="{StaticResource BodyTextBlockStyle}" TargetType="TextBlock">
+        <Setter Property="Margin" Value="0" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="TextTrimming" Value="CharacterEllipsis" />
+        <Setter Property="TextWrapping" Value="NoWrap" />
     </Style>
 
     <Style TargetType="controls:HamburgerMenuButton">
@@ -185,7 +183,7 @@
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
 
-                        <Border Width="{StaticResource BaseMeasure}" Height="{StaticResource BaseMeasure}">
+                        <Border Width="{StaticResource HamburgerButtonBaseMeasure}" Height="{StaticResource HamburgerButtonBaseMeasure}">
                             <ContentPresenter x:Name="IconContentPresenter"
                                               AutomationProperties.AccessibilityView="Raw"
                                               Content="{TemplateBinding Icon}"
