Zrušení Shellu. Hamburger bude pouze na MainPage.

--- a/OneDo/View/MainPage.xaml
+++ b/OneDo/View/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<view:BasePage x:Class="OneDo.View.Shell"
+﻿<view:PageBase x:Class="OneDo.View.MainPage"
                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,10 +7,15 @@
                xmlns:controls="using:OneDo.Controls"
                xmlns:converters="using:OneDo.Converters"
                xmlns:view="using:OneDo.View"
-               DataContext="{Binding Shell, Source={StaticResource ViewModelLocator}}"
+               DataContext="{Binding MainPage, Source={StaticResource ViewModelLocator}}"
                mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
                 <VisualState x:Name="Wide">
@@ -48,11 +53,21 @@
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
 
+        <controls:HamburgerTitleBar Grid.Row="0"
+                                    MenuButtonCommand="{x:Bind VM.TogglePaneCommand}"
+                                    Title="Inbox">
+            <StackPanel Orientation="Horizontal">
+                <Button Style="{StaticResource HamburgerTitleBarButtonStyle}">
+                    <FontIcon FontSize="20" Glyph="&#xE71E;" />
+                </Button>
+            </StackPanel>
+        </controls:HamburgerTitleBar>
+
         <controls:ExtendedSplitView x:Name="ShellSplitView"
-                                 Content="{x:Bind VM.MainFrame}"
-                                 IsPaneOpen="{Binding IsPaneOpen, Mode=TwoWay}"
-                                 KeepPaneOpen="{Binding KeepPaneOpen, Mode=TwoWay}"
-                                 DisplayMode="Overlay">
+                                    Grid.Row="1"
+                                    IsPaneOpen="{Binding IsPaneOpen, Mode=TwoWay}"
+                                    KeepPaneOpen="{Binding KeepPaneOpen, Mode=TwoWay}"
+                                    DisplayMode="Overlay">
             <SplitView.Pane>
                 <Grid>
                     <Grid.RowDefinitions>
@@ -60,7 +75,6 @@
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
                     <StackPanel Grid.Row="0">
-                        <controls:HamburgerTitleBar MenuButtonCommand="{x:Bind VM.TogglePaneCommand}" />
                         <controls:HamburgerMenuButton Content="Home" Command="{x:Bind VM.NavigateToMainPageCommand}">
                             <controls:HamburgerMenuButton.Icon>
                                 <FontIcon FontSize="16" Glyph="&#xE80F;" />
@@ -90,4 +104,4 @@
             </SplitView.Pane>
         </controls:ExtendedSplitView>
     </Grid>
-</view:BasePage>
+</view:PageBase>
