--- a/OneDo/View/AboutPage.xaml
+++ b/OneDo/View/AboutPage.xaml
@@ -1,16 +1,17 @@
-﻿<view:BasePage x:Class="OneDo.View.Pages.StartPage"
+﻿<view:PageBase x:Class="OneDo.View.AboutPage"
                xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                xmlns:view="using:OneDo.View"
                xmlns:model="using:OneDo.Model"
-               DataContext="{Binding StartPage, Source={StaticResource ViewModelLocator}}"
+               DataContext="{Binding AboutPage, Source={StaticResource ViewModelLocator}}"
                mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <StackPanel Margin="24,12">
-            <TextBlock Text="Start Page" Style="{ThemeResource HeaderTextBlockStyle}" />
+            <TextBlock Text="OneDo" Style="{ThemeResource HeaderTextBlockStyle}" />
+            <TextBlock Text="{x:Bind VM.VersionText}" />
         </StackPanel>
     </Grid>
-</view:BasePage>
+</view:PageBase>
